src/main/java/com/example/nbd/exceptions/invalidParametersExceptions/InvalidRentException.java
package com.example.nbd.exceptions.invalidParametersExceptions;

public class InvalidRentException extends InvalidParametersException {
    public InvalidRentException() {
        super("Invalid rent");
    }
}
